--- a/backend/env/example.env
+++ b/backend/env/example.env
@@ -1,1 +1,5 @@
 DJANGO_SETTINGS_MODULE=your-django-settings-module-path
+DJANGO_SECRET_KEY=your-django-secret-key
+DJANGO_DEBUG=using-debug
+DJANGO_ALLOWED_HOSTS=example_first_host,example_second_host
+DJANGO_DEFAULT_DATABASE_URL=your-database-url
