--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -24,7 +24,7 @@ services:
     build:
       context: ../backend
       dockerfile: ../docker/Dockerfile.dev
-    env_file: ../backend/env/dev.env
+    env_file: ../env/backend/dev.env
     command: >
       sh -c "
       python manage.py makemigrations
