--- a/nginx/dev.conf
+++ b/nginx/dev.conf
@@ -18,7 +18,7 @@ http {
     charset utf-8;
 
     # Application Server urls
-    location ~ ^/(admin|__debug__|api-auth) {
+    location ~ ^/(admin|__debug__|api-auth|api) {
       proxy_redirect off;
       proxy_set_header Host $http_host;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
