change path env files
- env 파일이 별도의 디렉토리를 차지하고 있는 모습이 보기 좋지 않다.
- nginx, backend, frontend의 총 세 가지 디렉토리 구조가 매우 마음에 든다.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # global ignore setting
 .vscode/
 __pycache__
-*.env
+.env.*
+!.env.example
 *.pyc
-!example.env
 docker-compose.prod.yml
 
 # backend ignore setting
