--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,24 @@
-# GLOBAL
-DEBUG = False
+# Frontend
 
-# DATABASE
+# Backend
+DEBUG = False
+DJANGO_SECRET_KEY = "prod-environ-secret-key"
+DJANGO_ALLOWED_HOSTS = "*"
+DJANGO_DEFAULT_DATABASE_URL = "postgres://db_user:db_password@database/db_name"
+DJANGO_STORAGE_ACCESS_KEY_ID = "storage-access-key"
+DJANGO_STORAGE_SECRET_ACCESS_KEY = "storage-secret-key"
+DJANGO_STATIC_STORAGE_BUCKET_NAME="your-static-bucket"
+DJANGO_MEDIA_STORAGE_BUCKET_NAME="your-media-bucket"
+GUNICORN_FORWARDED_ALLOW_IPS = "*"
+GUNICORN_PROXY_ALLOW_IPS = "*"
+
+# Nginx
+NGINX_DOMAIN="your domain"
+NGINX_STATIC_STORAGE_BUCKET_URL="your static bucket url"
+NGINX_MEDIA_STORAGE_BUCKET_URL="your media bucket url"
+
+# Database
 POSTGRES_USER = "db_user"
 POSTGRES_PASSWORD = "db_password"
 POSTGRES_DB = "db_name"
 POSTGRES_INITDB_ARGS = "--encoding=UTF-8"
-
-# DJANGO
-DJANGO_SECRET_KEY = "prod-environ-secret-key"
-DJANGO_ALLOWED_HOSTS = "*"
-DJANGO_DEFAULT_DATABASE_URL = "postgres://db_user:db_password@database/db_name"
-DJANGO_STORAGE_ACCESS_KEY_ID = "your storage access key"
-DJANGO_STORAGE_SECRET_ACCESS_KEY = "your storage secret key"
-DJANGO_STATIC_STORAGE_BUCKET_NAME="your static storage bucket name"
-DJANGO_MEDIA_STORAGE_BUCKET_NAME="your media storage bucket name"
-
-# GUNICORN
-GUNICORN_FORWARDED_ALLOW_IPS = "*"
-GUNICORN_PROXY_ALLOW_IPS = "*"
-
-# NGINX
-NGINX_DOMAIN="your domain"
-NGINX_STATIC_STORAGE_BUCKET_URL="your static storage bucket url"
-NGINX_MEDIA_STORAGE_BUCKET_URL="your media storage bucket url"
