Fix file's path
- ... 번복하는 것 같아 짜증나는 상황이지만, stage 환경이 추가됨으로써 루트 디렉토리가 복잡해졌다.
- env, docker-compose 디렉토리를 추가하였다.
- sa 환경 이름을 stage로 변경하였다.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,16 @@
-# global ignore setting
+# IDE
 .vscode/
+
+# Python
 __pycache__
-.env.*
-!.env.example
 *.pyc
-docker-compose.prod.yml
+
+# Environment
+.env.*
+!.env.*.example
+
+# frontend ignore setting
 
 # backend ignore setting
 backend/static/
 db.sqlite3
-
-# frontend ignore setting
