--- a/docker-compose/docker-compose.stage.yml
+++ b/docker-compose/docker-compose.stage.yml
@@ -1,8 +1,5 @@
 version: "3.8"
 
-volumes:
-  db_volume:
-
 services:
   # If you need to keep the container running,
   # command: tail -f /dev/null
@@ -12,34 +9,35 @@ services:
     image: postgres:latest
     volumes:
       - db_volume:/var/lib/postgresql/data
-    env_file: .env.dev
+    env_file: .env.prod
+    restart: always
 
-  # Web Application Server (Django)
+  # Application Server (Django)
   backend:
-    depends_on:
-      - database
     build:
       context: ./backend
-      dockerfile: ./Dockerfile.dev
-    env_file: .env.dev
+      dockerfile: ./Dockerfile.prod
+    env_file: .env.prod
     command: >
       sh -c "
       python manage.py makemigrations
       && python manage.py migrate
       && python manage.py collectstatic --noinput --verbosity 0
       && gunicorn"
-    volumes:
-      - ./backend:/app
     restart: always
 
   # Web Server (Nginx)
   web:
-    depends_on:
-      - backend
-    image: nginx:alpine
+    build:
+      context: ./nginx/sa
+      dockerfile: ./Dockerfile
     ports:
-      - "80:80"
-    volumes:
-      - ./backend/static/media/:/media/
-      - ./backend/static/static/:/static/
-      - ./nginx/dev/nginx.conf:/etc/nginx/nginx.conf:ro
+      - 80:80
+    env_file: .env.prod
+    command: >
+      sh -c "
+      envsubst '$$NGINX_STATIC_STORAGE_BUCKET_URL $$NGINX_MEDIA_STORAGE_BUCKET_URL' < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf
+      && nginx -g 'daemon off;'"
+
+volumes:
+  db_volume:
