--- a/nginx/dev/nginx.conf
+++ b/nginx/dev/nginx.conf
@@ -17,7 +17,7 @@ http {
     listen 80;
     charset utf-8;
 
-    location ~ ^/(admin|api) {
+    location / {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_redirect off;
