Add requirements - django-cachalot
- django-cachalot을 추가하였다.
- orm을 캐싱하되, 테이블에 변경이 있을 경우 테이블 단위로 캐싱 무효화를 진행하는 라이브러리이다.
- memcached를 사용하기 때문에 memcached 컨테이너를 추가로 구성하였다.

--- a/docker-compose/docker-compose.dev.yml
+++ b/docker-compose/docker-compose.dev.yml
@@ -14,10 +14,15 @@ services:
       - db_volume:/var/lib/postgresql/data
     env_file: ../env/.env.dev
 
+  # Cache Server (Cachalot)
+  cachalot-cache:
+    image: memcached:latest
+
   # Web Application Server (Django)
   backend:
     depends_on:
       - database
+      - cachalot-cache
     build:
       context: ../backend
       dockerfile: ./Dockerfile.dev
