--- a/docker-compose/docker-compose.stage.yml
+++ b/docker-compose/docker-compose.stage.yml
@@ -9,15 +9,20 @@ services:
     image: postgres:latest
     volumes:
       - db_volume:/var/lib/postgresql/data
-    env_file: .env.prod
+    env_file: ../env/.env.prod
     restart: always
+
+  # Cache Server (Cachalot)
+  cachalot-cache:
+    image: memcached:latest
+    env_file: ../env/.env.prod
 
   # Application Server (Django)
   backend:
     build:
-      context: ./backend
+      context: ../backend
       dockerfile: ./Dockerfile.prod
-    env_file: .env.prod
+    env_file: ../env/.env.prod
     command: >
       sh -c "
       python manage.py makemigrations
@@ -29,11 +34,11 @@ services:
   # Web Server (Nginx)
   web:
     build:
-      context: ./nginx/sa
+      context: ../nginx/stage
       dockerfile: ./Dockerfile
     ports:
       - 80:80
-    env_file: .env.prod
+    env_file: ../env/.env.prod
     command: >
       sh -c "
       envsubst '$$NGINX_STATIC_STORAGE_BUCKET_URL $$NGINX_MEDIA_STORAGE_BUCKET_URL' < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf
