Add environment API_VERSION, API_SERVICE_NAME
- google api guide에 설명되는 collection, resource name을 구현하는데에 필요한 정보들이 추가적으로 settings에 담기게 되었다.

--- a/docker-compose/docker-compose.prod.yml
+++ b/docker-compose/docker-compose.prod.yml
@@ -30,6 +30,7 @@ services:
     environment:
       - DEBUG
       - DJANGO_SECRET_KEY
+      - DJANGO_API_VERSION
       - DJANGO_ALLOWED_HOSTS
       - DJANGO_DEFAULT_DATABASE_URL
       - DJANGO_STORAGE_ACCESS_KEY_ID
