--- a/nginx/stage/nginx.conf.template
+++ b/nginx/stage/nginx.conf.template
@@ -30,7 +30,7 @@ http {
     client_max_body_size  4G;
     keepalive_timeout     5;
 
-    location ~ ^/(api) {
+    location ~ ^/(v[0-9]+) {
       proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header  X-Forwarded-Proto $scheme;
       proxy_set_header  Host $http_host;
