--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,5 +14,5 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - name: Install and Run Pre-commit
-        uses: pre-commit/action@v2.0.3
+      - name: Install and Run Black
+        uses: psf/black@21.6b0
