--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches: ["master"]
 
 jobs:
-  linter:
+  format:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code Repository
@@ -16,3 +16,42 @@ jobs:
           python-version: 3.9
       - name: Install and Run Black
         uses: psf/black@21.6b0
+
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 4
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_USER: test_user
+          POSTGRES_PASSWORD: test_pw
+          POSTGRES_DB: test_db
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r backend/requirements/action.txt
+      - name: Run Tests
+        env:
+          DEBUG: True
+          DJANGO_SECRET_KEY: test_environ_secret_key
+          DJANGO_SETTINGS_MODULE: config.settings.test
+          DJANGO_ALLOWED_HOSTS: "*"
+          DJANGO_API_VERSION: v1
+          DJANGO_DEFAULT_DATABASE_URL: postgres://test_user:test_pw@5432/test_db
+        run: |
+          python manage.py test --settings=${DJANGO_SETTINGS_MODULE}
