--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,4 +54,4 @@ jobs:
           DJANGO_API_VERSION: v1
           DJANGO_DEFAULT_DATABASE_URL: postgres://test_user:test_pw@5432/test_db
         run: |
-          python manage.py test --settings=${DJANGO_SETTINGS_MODULE}
+          python backend/manage.py test --settings=${DJANGO_SETTINGS_MODULE}
